Implemented client proposal flow with JWT-based access, accept/reject functionality, and MongoDB integration